<resources>
    <string name="app_name">FinalProject</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_todoList">To Do</string>
    <string name="title_flashcard"></string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign-In</string>
    <string name="action_sign_in">Sign In</string>
    <string name="title_activity_login">Login Page</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_SignUp">Sign Up</string>
    <string name="title_SignIn">Sign In</string>
    <string name="splash">Revise Me</string>
    <string name="type_your_task">Type Your Task......</string>
    <string name="title_profile">Profile</string>
    <string name="title_toDo">To-Do</string>
    <string name="title_Category">Category</string>
    <string name="hello_profile_fragment">Profiel Fragment</string>
    <string name="type_your_description">Type your Description...</string>
</resources>