<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_splash">

    <fragment
        android:id="@+id/navigation_signIn"
        android:name="com.example.finalproject.ui.login.LoginFragment"
        android:label="@string/title_SignIn"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_navigation_signIn_to_navigation_SignUp"
            app:destination="@id/navigation_SignUp" />
        <action
            android:id="@+id/action_navigation_signIn_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>


    <fragment
        android:id="@+id/navigation_SignUp"
        android:name="com.example.finalproject.ui.login.SignUpFragment"
        android:label="@string/title_SignUp"
        tools:layout="@layout/fragment_sign_up">
        <action
            android:id="@+id/action_navigation_SignUp_to_navigation_signIn"
            app:destination="@id/navigation_signIn" />
    </fragment>

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.finalproject.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_splash"
            app:destination="@id/navigation_splash" />
        <action
            android:id="@+id/action_navigation_home_to_activity1"
            app:destination="@id/activity1"/>
        <action
            android:id="@+id/action_navigation_home_to_navigation_signIn"
            app:destination="@id/navigation_signIn" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.finalproject.ui.todo.TodoListFragment"
        android:label="@string/title_toDo"
        tools:layout="@layout/fragment_todolist" />



    <activity
        android:id="@+id/activity1"
        android:name="com.example.finalproject.MainActivity"
        android:label="Activity Main"
        tools:layout="@layout/activity_main">
    </activity>

    <activity
        android:id="@+id/activity2"
        android:name="com.example.finalproject.ui.login.SecondActivity"
        android:label="Activity Second"
        tools:layout="@layout/activity_second">

    </activity>




    <fragment
        android:id="@+id/navigation_splash"
        android:name="com.example.finalproject.ui.SplashFragment"
        android:label="@string/splash"
        tools:layout="@layout/fragment_splash">
        <action
            android:id="@+id/action_navigation_splash_to_navigation_signIn"
            app:destination="@id/navigation_signIn" />
        <action
            android:id="@+id/action_navigation_splash_to_navigation_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/navigation_splash"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_category"
        android:name="com.example.finalproject.ui.category.CategoryFragment"
        android:label="Categories">
        <action
            android:id="@+id/action_navigation_category_to_navigation_flashcard"
            app:destination="@id/navigation_flashcard" />
    </fragment>

    <fragment
        android:id="@+id/navigation_flashcard"
        android:name="com.example.finalproject.ui.flashcard.FlashcardFragment"
        android:label="Flashcard">
        <action
            android:id="@+id/action_navigation_flashcard_to_navigation_category"
            app:destination="@id/navigation_category" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.finalproject.ui.profile.ProfileFragment"
        android:label="Profile">
        <action
            android:id="@+id/action_navigation_profile_to_navigation_signIn"
            app:destination="@id/navigation_signIn" />
    </fragment>







</navigation>